<resources>
    <string name="app_name">SEA Catering</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_subscription">Subscription</string>

    // Text Komponen
    <string name="next">Next</string>
    <string name="finish">Finish</string>

    // Opening String
    <string name="title_splash_screen">SEA Catering</string>
    <string name="slogan">Healthy Meals, Anytime, Anywhere</string>
    <string name="title_onboarding_screen_1">Customize Your Meals</string>
    <string name="desc_onboarding_screen_1">Choose your favorite proteins, carbs, and veggies. We\'ll prepare the healthy meal you truly want.</string>
    <string name="title_onboarding_screen_2">Delivered to Your Doorstep</string>
    <string name="desc_onboarding_screen_2">Enjoy convenient delivery to major cities across Indonesia, right to your home or office.</string>
    <string name="title_onboarding_screen_3">Know Your Nutrition</string>
    <string name="desc_onboarding_screen_3">Every meal comes with clear calorie and nutritional info to help you achieve your health goals.</string>

    // App Bar
    <string name="contact_us">Contact Us</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="review">Add Review</string>
    <string name="detail_menu">Detail Menu</string>
    <string name="detail_Home">Detail Home</string>
    <string name="checkout">Checkout</string>

    // Login and register
    <string name="title_login">Login to your Account</string>
    <string name="email">Email</string>
    <string name="hint_email">Input your email</string>
    <string name="password">Password</string>
    <string name="hint_password">Input your password</string>
    <string name="sign_in">Sign In</string>
    <string name="chosee_sign_in_with">Or Sign in WIth</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="title_register">Create your Account</string>
    <string name="username">Username</string>
    <string name="hint_username">Input your username</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_up_with">Or Sign Up WIth</string>
    <string name="don_t_have_an_account_sign_in">Don’t have an account? Sign In</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="google_logo">Google Logo</string>
    <string name="apple_logo">Apple logo</string>
    <string name="default_web_client_id">78488129789-i51g88adf55omefon0jtk67jr3r84l67.apps.googleusercontent.com</string>
    <string name="logo_sea_catering">Logo Sea Catering</string>


    // Profile
    <string name="address">Address</string>
    <string name="hint_address">Input yout Address</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>

    // Dashboard
    <string name="greeting">Hello, %s</string>
    <string name="title_card_dashboard">Your Subscription</string>
    <string name="package_name">Package Name</string>
    <string name="subscription_status">Subscription Status</string>
    <string name="meal_types">Meal Types</string>
    <string name="delivery_days">Delivery Days</string>
    <string name="titik_dua">:</string>
    <string name="total_price">Total Price</string>
    <string name="next_renewal_date">Next Renewal Date</string>
    <string name="title_bottom_sheet">Want to pause your subscription?</string>
    <string name="desc_bottom_sheet">Select the date range during which you do not want to receive deliveries.</string>
    <string name="select_date">Select Date</string>
    <string name="confirm_pause">Confirm Pause</string>
    <string name="pause_subcription">Pause Subcription</string>
    <string name="cancel_subsciption">Cancel Subsciption</string>
    <string name="logo_calender">logo_calender</string>
    <string name="you_don_t_have_subscription">You don\'t have any subscription.\nPlease subscribe.</string>

    // Contact Us
    <string name="contact_via_whatsapp">Contact via WhatsApp</string>
    <string name="call_contact">Call Contact</string>
    <string name="number_brian">+628123456789</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Hallo, saya ingin bertanya tentang pesanan saya.</string>
    <string name="brian_manager">Brian (Manager)</string>
    <string name="desc_contact_us">Get in touch if you have any questions about your order or our service.</string>
    <string name="title_contact_us">We\'re here to help</string>

    //Home
    <string name="add_review">Add Review</string>
    <string name="our_advantages">Our Advantages</string>
    <string name="popular_plans">This Week\'s Popular Plans</string>
    <string name="testimonials">Our Testimonials</string>
    <string name="headline_banner">Healthy Meals, Delivered Daily</string>
    <string name="desc_banner">Customizable meal plans designed for your health goals</string>
    <string name="explore_menu">Explore Menu</string>

    // Subcription
    <string name="title_page_subcription">Build Your Subscription Plan</string>
    <string name="desc_page_subscription">Customize your weekly meals in a few simple steps.</string>
    <string name="choose_your_package_meal">Choose your package, meal types, and delivery days.</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="rp30_000">Rp30.000/meal</string>
    <string name="protein_plan">Protein Plan</string>
    <string name="rp40_000">Rp40.000/meal</string>
    <string name="royal_plan">Royal Plan</string>
    <string name="rp50_000">Rp50.000/meal</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="breakfest">Breakfest</string>
    <string name="launch">Launch</string>
    <string name="dinner">Dinner</string>
    <string name="monday">Monday</string>
    <string name="friday">Friday</string>
    <string name="tuesday">Tuesday</string>
    <string name="saturday">Saturday</string>
    <string name="wednesday">Wednesday</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="let_us_know_about_any_allergies">Let us know about any allergies or special requests.</string>
    <string name="hint_allergies">I’m allergies with…</string>
    <string name="note_fields_marked">Note: Fields marked with (*) If you not have allergies</string>
    <string name="note_fields_password">Password must be at least 8 characters. include uppercase, lowercase, numbers, and symbols.</string>
    <string name="note_fields_password_isEmpty">Please enter your password</string>
    <string name="subcribe_now">Subcribe Now</string>

    // Review
    <string name="title_page_review">Share your experience with us!</string>
    <string name="desc_page_review">Your feedback helps us to improve our service.</string>
    <string name="rating">Rating</string>
    <string name="hint_review">Share your experience in here!</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>

    // Dashboard Admin
    <string name="net_subscription_growth">Net Subscription Growth</string>
    <string name="example_net_subs_growth">Last 30 Days +15%</string>
    <string name="_15">+15%</string>
    <string name="total_active_subscribers">Total Active\nSubscribers</string>
    <string name="reactivated_subscriptions">Reactivated\nSubscriptions</string>
    <string name="new_subscriptions">New Subscriptions</string>
    <string name="total_revenue">Total Revenue\n(MRR)</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="last_30_days">Last 30 Days</string>
    <string-array name="date_ranges">
        <item>Last 7 Days</item>
        <item>Last 30 Days</item>
        <item>This Month</item>
        <item>Custom Range</item>
    </string-array>
    <string name="create_report">Create Report</string>



    // Menu
    <string name="menu_plan_image">Menu Plan Image</string>
    <string name="view_detail">View Detail</string>

    // Checkout
    <string name="allergies">Allergies</string>
    <string name="plan_selection">Plan Selection</string>
    <string name="your_subscription_plan">Your Subscription Plan</string>

    // Image Uri
    <string name="profile_image_default">https://raw.githubusercontent.com/Haikalimanf/AssetFotoIconSalon/refs/heads/main/default_avatar_man.jpg</string>
    <string name="banner_image_home">https://raw.githubusercontent.com/Haikalimanf/AssetFotoIconSalon/refs/heads/main/banner_image_home.png</string>
    <string name="image_plan_menu">Image Plan Menu</string>
    <string name="diet_plan_image">Diet Plan Image</string>
    <string name="activated">Activated</string>
</resources>