<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".ui.user.review.ReviewActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_page_review"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_page_review"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="16dp"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="6dp"
    />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:progressTint="@color/yellow"
        android:rating="4"
        android:stepSize="1"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.RatingBar"
        android:isIndicator="false"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
    />

    <EditText
        android:id="@+id/edt_review"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/hint_review"
        android:textColorHint="@color/gray"
        android:paddingStart="15dp"
        android:paddingEnd="16dp"
        android:paddingBottom="25dp"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:maxLines="4"
        android:lines="3"
        android:scrollHorizontally="false"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/green"
        android:textColor="@android:color/white"
        android:text="@string/post" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
    />

</LinearLayout>