<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.user.profile.ProfileActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|top"
        android:padding="24dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="133dp"
                android:layout_height="133dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"
                android:background="@drawable/circle_background_image"
                android:clipToOutline="true" />

            <ImageView
                android:id="@+id/btn_change_photo"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="bottom|end"
                android:layout_margin="8dp"
                android:background="@drawable/circle_background_icon_camera"
                android:padding="8dp"
                android:src="@drawable/ic_camera"
                android:contentDescription="Change profile picture" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/hint_username"
            android:textColorHint="@color/gray"
            android:paddingStart="15dp"
            android:paddingEnd="16dp"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/hint_email"
            android:textColorHint="@color/gray"
            android:paddingStart="15dp"
            android:paddingEnd="16dp"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/hint_password"
            android:textColorHint="@color/gray"
            android:paddingStart="15dp"
            android:paddingEnd="16dp"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_addres"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/hint_address"
            android:textColorHint="@color/gray"
            android:paddingStart="15dp"
            android:paddingEnd="16dp"
            android:paddingBottom="25dp"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:maxLines="4"
            android:lines="3"
            android:scrollHorizontally="false"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/green"
            android:text="@string/save" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/log_out"
            android:textColor="@android:color/white"
            />

    </LinearLayout>
</ScrollView>